<resources>
    <string name="app_name">Travelgram</string>

    <!-- Main Activity -->
    <string name="title_scratchmap">Map</string>
    <string name="title_journal">Journal</string>
    <string name="title_search">Search</string>
    <string name="title_add_memory">New Memory</string>

    <!-- Place Activity -->
    <string name="MyMemories">My Memories</string>
    <string name="Memories">Friends\' Memories</string>
    <string name="Reviews">Reviews</string>
    <string name="Guides">Guides</string>

    <!-- Login/Signup Activity -->
    <string name="prompt_username">username</string>
    <string name="prompt_email">e-mail</string>
    <string name="prompt_password">password</string>
    <string name="prompt_password2">confirm password</string>
    <string name="signupBtn">Sign Up</string>
    <string name="loginBtn">Log In</string>
    <string name="click_signup">Not Registered? <u>Sign Up</u></string>

    <string name="username_required">username is required</string>
    <string name="email_required">e-mail is required</string>
    <string name="password_required">password is required</string>
    <string name="password_mismatch">passwords don\'t match</string>
    <string name="password_too_short">Minimum length of password should be 6</string>

    <!-- Insert Memory Activity -->
    <string name="share">share</string>
    <string name="new_memory">New Memory</string>

    <!-- Search user -->
    <string name="follow">follow</string>
    <string name="following">following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>